--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <java.version>1.8</java.version>
 
         <!--     docker 前缀   -->
-        <docker.image.prefix>fashion_class_book</docker.image.prefix>
+        <docker.image.prefix>fcb</docker.image.prefix>
     </properties>
 
     <dependencies>
