--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <!--微信公众号 https://github.com/Wechat-Group/WxJava-->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>3.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
