--- a/src/main/resources/core.properties
+++ b/src/main/resources/core.properties
@@ -1,9 +1,17 @@
-
 ftp.server.ip=39.97.172.203
 ftp.user=ftpUser
 ftp.pass=ftpUser
 ftp.server.http.prefix=ftp://39.97.172.203/
-
 password.salt=fashion_class_book_sdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+
+
 #MultipartFile path
 multipartfile.filePath=/Users/apple/Downloads/fileUpload/
+
+
+# Swagger界面内容配置
+swagger.enable=true
+swagger.title=FCB API接口文档
+swagger.description=FCB Api Documentation
+swagger.version=1.0.0
+swagger.termsOfServiceUrl=http://blog.fcb.cn
